@@ -1,3 +1,8 @@
+2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: emacs/kahua.el.in
+	  Compatibility with Emacs 21 (that doesn't have read-directory-name).
+
 2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua/server.scm
